# Travel-Planner-BE

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: ae7352e1c370_init_schema.py
src/: database.py  deps.py  main.py  models.py  schemas.py
src/clients/: artic.py
src/routers/: projects.py
src/services/: projects.py
