[project]
name = "travel-planner"
version = "0.1.0"
description = ""
authors = [
    {name = "VKHR-0",email = "viktor.harhatt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.133.1,<0.134.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
