[project]
name = "travel-planner"
version = "0.1.0"
description = ""
authors = [{ name = "VKHR-0", email = "viktor.harhatt@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi[standard] (>=0.133.1,<0.134.0)",
  "uvicorn (>=0.41.0,<0.42.0)",
  "sqlalchemy (>=2.0,<3.0)",
  "alembic (>=1.16,<2.0)",
  "psycopg[binary] (>=3.2,<4.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
